@@ -1304,6 +1304,7 @@ struct cb_statement {
 	unsigned int		flag_in_debug	: 1;	/* In DEBUGGING */
 	unsigned int		flag_merge	: 1;	/* Is MERGE */
 	unsigned int		flag_callback	: 1;	/* DEBUG Callback */
+	unsigned int		flag_implicit	: 1;	/* Is an implicit statement */
 };
 
 #define CB_STATEMENT(x)		(CB_TREE_CAST (CB_TAG_STATEMENT, struct cb_statement, x))
